# sneaker-intel

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DEVLOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
db/: __init__.py  load_raw.py  schema.sql  seeds.sql
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: _marts__models.yml  mart_price_trajectory.sql  mart_search_interest.sql  mart_shoe_performance.sql
dbt_project/models/staging/: _staging__models.yml  _staging__sources.yml  stg_drops.sql  stg_sales.sql  stg_search_interest.sql  stg_shoes.sql  stg_social_posts.sql
docs/: erd.md
docs/posts/: 01-building-in-public.md  02-ingestion-without-keys.md  03-a-star-schema-by-hand.md  04-dbt-and-window-functions.md  05-thin-dashboard-real-ci.md  06-real-data-over-a-scraper.md  README.md
ingestion/: __init__.py  config.py  ebay.py  reddit.py  run_ingestion.py  stockx.py  storage.py  trends.py
scripts/: seed_remote.py
tests/: test_ingestion.py  test_load_raw.py  test_stockx.py
