[project]
name = "sneaker-intel"
version = "0.1.0"
description = "Sneaker Resale Intelligence Platform — an end-to-end data engineering portfolio project."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
